--- a/backend/.env
+++ b/backend/.env
@@ -2,5 +2,5 @@ MONGO_URI=mongodb://localhost:27017/CityConnect
 PORT=5000
 JWT_SECRET=mykey123
 MAIL_USER=mohdabdulrahman510@gmail.com
-MAIL_PASS=veso lutw gtej mobg
+MAIL_PASS=asd
 CLIENT_URL=http://localhost:8081
